--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
@@ -18,9 +22,59 @@ allprojects {
         flatDir {
             dirs 'libs' //this way we can find the .aar file in libs folder
         }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    // Sdk and tools
+    minSdkVersion = 15
+    targetSdkVersion = 26
+    compileSdkVersion = 26
+    buildToolsVersion = "26.0.1"
+    supportLibraryVersion = '26.+'
+    //compatible
+    compatibleSdkVersion = 23 // for projects which can't be built with sdk 24+
+    compatibleSupportLibraryVersion = '23.4.0' // for projects which can't be built with sdk 24+
+
+    // App dependencies
+    apachecommonsVersion = '4.0'
+    butterknifeVersion = '7.0.1'
+    commonsioVersion = '2.5'
+    circleimageviewVersion = '2.1.0'
+    dbflowVersion = '3.0.1'
+    disklrucacheVersion = '2.0.2'
+    eventbusVersion = '3.0.0'
+    fastjsonVersion = '1.1.34.android'
+    filedownloaderVersion = '0.3.4'
+    junitVersion = '4.12'
+    juniversalchardetVersion = '1.0.3'
+    leakcanaryVersion = '1.4-beta2'
+    lucenecoreVersion = '2.9.4'
+    retrofit2Version = '2.1.0'
+    ruedigermoellerfstVersion = '2.47'
+    zip4jVersion = '1.3.2'
+    constraintlayoutVersion = '1.0.0-beta4'
+    okhttpurlconnectionVersion = '2.0.0'
+    picassoVersion = '2.5.2'
+    multidexVersion = '1.0.1'
+    espressoVersion = '2.2.2'
+    easyPermissonVersion = '0.2.1'
+    mpAndroidChart = '3.0.1'
+
+    aliyunOssSdkVersion = '2.3.0'
+    wechatSdkWithMtaVersion = '1.0.2'
+
+    jsoupVersion = '1.10.2'
+    slf4jVersion = '1.7.12'
+    epublibVersion = "1.0"
+
+    avoscloudVersion = 'v3.13.7'
 }
