--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ allprojects {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven {
+            url  "http://dl.bintray.com/dasar/maven"
+        }
     }
 }
 
