--- a/reader-core/build.gradle
+++ b/reader-core/build.gradle
@@ -61,10 +61,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:26.1.0'
+//    compile files('libs/slf4j-android-1.6.1-RC1.jar')
+//    compile 'com.android.support:appcompat-v7:26.1.0'
+//    compile 'nl.siegmann.epublib:epub-core:1.0@aar'
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':libutils')
+
 
 }
